tetrate/3-lab/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: 3-lab
  labels:
    istio-injection: enabled
