tetrate/3-lab/customers-5050.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customers
spec:
  hosts:
    - 'customers.3-lab.svc.cluster.local'
  http:
    - route:
        - destination:
            host: customers.3-lab.svc.cluster.local
            port:
              number: 80
            subset: v1
          weight: 50
        - destination:
            host: customers.3-lab.svc.cluster.local
            port:
              number: 80
            subset: v2
          weight: 50
