tetrate/3-lab/customers-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customers
spec:
  hosts:
    - customers.3-lab.svc.cluster.local
  http:
    - route:
        - destination:
            host: customers.3-lab.svc.cluster.local
            port:
              number: 80
            subset: v1
